--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,6 +16,7 @@
         </td>
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        <%= render "favorites/favorite", book: book %>
       </tr>
     <% end %>
   </tbody>
