--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,6 +8,22 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>follows</th>
+    <th>
+      <%= link_to follows_user_path(user) do %>
+        <%= current_user.follower.count %>
+      <% end %>
+    </th>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <th>
+      <%= link_to followers_user_path(user) do %>
+        <%= current_user.followed.count %>
+      <% end %>
+      </th>
+  </tr>
 </table>
 
 <div class='row'>
