--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -15,7 +15,7 @@
         <td>フォロワー数：<%= current_user.followed.count %></td>
         <td>
           <% if current_user != user %>
-            <% if following_by?(user) %>
+            <% if current_user.following?(user) %>
               <%= link_to 'フォロー外す', user_relationships_path(user.id), method: :delete %>
             <% else %>
               <%= link_to 'フォローする', user_relationships_path(user.id), method: :post %>
